--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand">
-                <a href="#top" onclick=$("#menu-close").click();>Start Bootstrap</a>
+                <a href="#top" onclick=$("#menu-close").click();>TowerDefense Game</a>
             </li>
             <li>
                 <a href="#top" onclick=$("#menu-close").click();>Home</a>
@@ -61,15 +61,15 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1>Start Bootstrap</h1>
-            <h3>Free Bootstrap Themes &amp; Templates</h3>
-            <br>
-            <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
+            <h1>TowerDefense Game</h1>
+            <h3>AI System implemented in TowerDefense Game</h3>
+        <!--     <br>
+            <a href="#about" class="btn btn-dark btn-lg">Find Out More</a> -->
         </div>
     </header>
 
     <!-- About -->
-    <section id="about" class="about">
+ <!--    <section id="about" class="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -78,13 +78,13 @@
                 </div>
             </div>
             <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
+      <!--   </div>
+        /.container
+    </section> -->
 
     <!-- Services -->
     <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
-    <section id="services" class="services bg-primary">
+    <!-- <section id="services" class="services bg-primary">
         <div class="container">
             <div class="row text-center">
                 <div class="col-lg-10 col-lg-offset-1">
@@ -144,19 +144,19 @@
                             </div>
                         </div>
                     </div>
-                    <!-- /.row (nested) -->
+                    <!-- /.row (nested)
                 </div>
                 <!-- /.col-lg-10 -->
             </div>
             <!-- /.row -->
         </div>
         <!-- /.container -->
-    </section>
+    </section> 
 
     <!-- Callout -->
     <aside class="callout">
         <div class="text-vertical-center">
-            <h1>Vertically Centered Text</h1>
+           <iframe width="600" height="400" src="https://www.youtube.com/embed/0FANLYmvinE" frameborder="0" allowfullscreen=""></iframe>
         </div>
     </aside>
 
@@ -198,7 +198,7 @@
                         </div>
                     </div>
                     <!-- /.row (nested) -->
-                    <a href="#" class="btn btn-dark">View More Items</a>
+                    <!-- <a href="#" class="btn btn-dark">View More Items</a> -->
                 </div>
                 <!-- /.col-lg-10 -->
             </div>
@@ -212,21 +212,180 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h3>The buttons below are impossible to resist.</h3>
+                  <!--   <h3>The buttons below are impossible to resist.</h3>
                     <a href="#" class="btn btn-lg btn-light">Click Me!</a>
-                    <a href="#" class="btn btn-lg btn-dark">Look at Me!</a>
+                    <a href="#" class="btn btn-lg btn-dark">Look at Me!</a> -->
                 </div>
             </div>
         </div>
     </aside>
-
+<!-- //-118.15 纬度34.04 -->
     <!-- Map -->
-    <section id="contact" class="map">
-        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
+   <!--  <section id="contact" class="map">
+        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+Los+Angeles,+CA&amp;aq=0&amp;oq=twitter&amp;sll=34.0,-118.15&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
         <br />
         <small>
             <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
         </small>
+    </section> -->
+
+
+    <section id="services" class="services bg-primary">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-lg-10 col-lg-offset-1">
+                    <h2>Our Team</h2>
+                    <hr class="small">
+                    <div class="row">
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                                <!-- <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-cloud fa-stack-1x text-primary"></i> -->
+                            </span>
+                                <h4>
+                                    <strong>Fei Fan</strong>
+                                </h4>
+                               <!--  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                                <a href="https://www.linkedin.com/in/fan-fei-4975a486/" class="btn btn-light">LinkedIn</a>
+                                <a class="btn btn-light">Resume</a>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                                <!-- <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-compass fa-stack-1x text-primary"></i> -->
+                            </span>
+                                <h4>
+                                    <strong>Wen Zhong</strong>
+                                </h4>
+                               <!--  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                                <a href="https://www.linkedin.com/in/wen-zhong-ba254a78/" class="btn btn-light">LinkedIn</a>
+                                <a href="https://drive.google.com/open?id=0B1N9mn8zqH49cElqX3ZJWEtzY0tnOGt3U3R2X2hSOE9USjE4" class="btn btn-light">Resume</a>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                               <!--  <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-flask fa-stack-1x text-primary"></i> -->
+                            </span>
+                                <h4>
+                                    <strong>Weiliang li</strong>
+                                </h4>
+                           <!--      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                                <a href="https://www.linkedin.com/in/%E7%82%9C%E8%89%AF-%E6%9D%8E-3736a2118/" class="btn btn-light">LinkedIn</a>
+                                <a class="btn btn-light">Resume</a>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                               <!--  <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-shield fa-stack-1x text-primary"></i> -->
+                            </span>
+                                <h4>
+                                    <strong>Guangzhao Feng</strong>
+                                </h4>
+                             <!--    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                                <a href="https://www.linkedin.com/in/guangzhao-feng-53a84367/" class="btn btn-light">LinkedIn</a>
+                                <a href="https://drive.google.com/open?id=0B1N9mn8zqH49OTZmdEdxdWFabTdWZHFZUDBVVDhGQ3BBV2Zj" class="btn btn-light">Resume</a>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                               <!--  <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-shield fa-stack-1x text-primary"></i> -->
+                            </span>
+                                <h4>
+                                    <strong>Hongru Zhang</strong>
+                                </h4>
+         <!--                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                                <a href="https://www.linkedin.com/in/hongru-zhang-135560105/" class="btn btn-light">LinkedIn</a>
+                                <a class="btn btn-light">Resume</a>
+                            </div>
+                        </div>
+                         <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                               <!--  <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-shield fa-stack-1x text-primary"></i> -->
+                            </span>
+                                <h4>
+                                    <strong>Neel Shah</strong>
+                                </h4>
+         <!--                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                                <a href="https://www.linkedin.com/in/shahneel61" class="btn btn-light">LinkedIn</a>
+                                <a class="btn btn-light">Resume</a>
+                            </div>
+                        </div>
+                         <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                               <!--  <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-shield fa-stack-1x text-primary"></i> -->
+                            </span>
+                                <h4>
+                                    <strong>Venkatesh Lokare</strong>
+                                </h4>
+         <!--                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                                <a href="https://www.linkedin.com/in/venky177/" class="btn btn-light">LinkedIn</a>
+                                <a href="https://drive.google.com/open?id=0B1N9mn8zqH49ZmlxeXROQmpwRXhIYWVabFdKU0tZbXp4ZEZR" class="btn btn-light">Resume</a>
+                            </div>
+                        </div>
+                         <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                               <!--  <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-shield fa-stack-1x text-primary"></i> -->
+                            </span>
+                                <h4>
+                                    <strong>Nimesh Jain</strong>
+                                </h4>
+         <!--                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                                <a href="https://www.linkedin.com/in/nimesh-jain-3a559042" class="btn btn-light">LinkedIn</a>
+                                <a href="https://drive.google.com/open?id=0B1N9mn8zqH49aURibzVwZHRNdDAwejRLeGlJSzM2WktMTGE4" class="btn btn-light">Resume</a>
+                            </div>
+                        </div>
+                         <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                               <!--  <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-shield fa-stack-1x text-primary"></i> -->
+                            </span>
+                                <h4>
+                                    <strong>Bhavya Sanghavi</strong>
+                                </h4>
+         <!--                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                                <a href="https://www.linkedin.com/in/bhavyasanghavi/" class="btn btn-light">LinkedIn</a>
+                                <a href="https://drive.google.com/open?id=0B1N9mn8zqH49aURibzVwZHRNdDAwejRLeGlJSzM2WktMTGE4" class="btn btn-light">Resume</a>
+                            </div>
+                        </div>
+                         
+                         <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                               <!--  <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-shield fa-stack-1x text-primary"></i> -->
+                            </span>
+                                <h4>
+                                    <strong>Hongru Zhang</strong>
+                                </h4>
+         <!--                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                                <a href="https://www.linkedin.com/in/hongru-zhang-135560105/" class="btn btn-light">LinkedIn</a>
+                                <a href="https://drive.google.com/open?id=0B1N9mn8zqH49MVRZdy04SHpnTUk" class="btn btn-light">Resume</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.row (nested)
+                </div>
+                <!-- /.col-lg-10 -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
     </section>
 
     <!-- Footer -->
@@ -234,13 +393,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h4><strong>Start Bootstrap</strong>
+                    <h4><strong>Tower Defense!!!</strong>
                     </h4>
-                    <p>3481 Melrose Place
-                        <br>Beverly Hills, CA 90210</p>
+                    <p>University of Southern California 
+                        <br>Los Angeles, CA 90007</p>
                     <ul class="list-unstyled">
-                        <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>
-                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:name@example.com">name@example.com</a>
+                       <!--  <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li> -->
+                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:twdefense@twdefense.com">name@example.com</a>
                         </li>
                     </ul>
                     <br>
@@ -256,7 +415,7 @@
                         </li>
                     </ul>
                     <hr class="small">
-                    <p class="text-muted">Copyright &copy; Your Website 2014</p>
+                    <p class="text-muted">Copyright &copy; USC 2017</p>
                 </div>
             </div>
         </div>
