--- a/index.html
+++ b/index.html
@@ -300,11 +300,11 @@
                                 <i class="fa fa-shield fa-stack-1x text-primary"></i> -->
                             </span>
                                 <h4>
-                                    <strong>Nandan Padar Chandrashekar</strong>
+                                    <strong>Nandan Padar</strong>
                                 </h4>
          <!--                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
-                                <a href="https://www.linkedin.com/in/hongru-zhang-135560105/" class="btn btn-light">LinkedIn</a>
-                                <a href="https://www.linkedin.com/in/nandanpc/" class="btn btn-light">Resume</a>
+                                <a href="https://www.linkedin.com/in/nandanpc/" class="btn btn-light">LinkedIn</a>
+                                <a href="https://drive.google.com/open?id=0B1N9mn8zqH49U3g1d0lqN1VQRnFsUEhnNTI5bVczMDZPTnlz" class="btn btn-light">Resume</a>
                             </div>
                         </div>
                          <div class="col-md-3 col-sm-6">
