--- a/index.html
+++ b/index.html
@@ -61,8 +61,11 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1>TowerDefense Game</h1>
-            <h3>AI System implemented in TowerDefense Game</h3>
+            <h3>for tower defense game</h3>
+            <h1>Game Level Generator</h1>
+            <h2>Trained ML Model + Eveloutionary Algorithm =</h2>
+            <h3></h3>
+            <h2>game level of any difficulties you want</h2>
         <!--     <br>
             <a href="#about" class="btn btn-dark btn-lg">Find Out More</a> -->
         </div>
@@ -160,7 +163,9 @@
            <iframe width="600" height="400" src="https://www.youtube.com/embed/6BK6BIESA04" frameborder="0" allowfullscreen></iframe>
         </div>
     </aside>
-
+    <div align="center">
+        <h4>As shown in the demo, game level evolved to be harder and harder.</h4>
+    </div>
     <!-- Portfolio -->
     <section id="portfolio" class="portfolio">
         <div class="container">
@@ -394,12 +399,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h4><strong>Tower Defense!!!</strong>
+                    <h4><strong>Tower Defense</strong>
                     </h4>
+                    <p>for more information, please contact one of our team above</p>
                     <p>University of Southern California 
                         <br>Los Angeles, CA 90007</p>
-                    <ul class="list-unstyled">
-                       <!--  <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li> -->
+                    <!-- <ul class="list-unstyled">
+                        <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>
                         <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:twdefense@twdefense.com">name@example.com</a>
                         </li>
                     </ul>
@@ -414,7 +420,7 @@
                         <li>
                             <a href="#"><i class="fa fa-dribbble fa-fw fa-3x"></i></a>
                         </li>
-                    </ul>
+                    </ul> -->
                     <hr class="small">
                     <p class="text-muted">Copyright &copy; USC 2017</p>
                 </div>
