--- a/index.html
+++ b/index.html
@@ -44,14 +44,15 @@
                 <a href="#top" onclick=$("#menu-close").click();>Home</a>
             </li>
             <li>
-                <a href="#about" onclick=$("#menu-close").click();>About</a>
+                <a href="#demo" onclick=$("#menu-close").click();>Demo</a>
             </li>
             <li>
-                <a href="#services" onclick=$("#menu-close").click();>Services</a>
+                <a href="#portfolio" onclick=$("#menu-close").click();>Work</a>
             </li>
             <li>
-                <a href="#portfolio" onclick=$("#menu-close").click();>Portfolio</a>
+                <a href="#services" onclick=$("#menu-close").click();>Team</a>
             </li>
+            
             <li>
                 <a href="#contact" onclick=$("#menu-close").click();>Contact</a>
             </li>
@@ -158,7 +159,7 @@
 
     <!-- Callout -->
     <aside class="callout">
-        <div class="text-vertical-center">
+        <div id='demo' class="text-vertical-center">
            <!-- <iframe width="600" height="400" src="https://www.youtube.com/embed/0FANLYmvinE" frameborder="0" allowfullscreen=""></iframe> -->
            <iframe width="600" height="400" src="https://www.youtube.com/embed/6BK6BIESA04" frameborder="0" allowfullscreen></iframe>
         </div>
@@ -396,6 +397,7 @@
 
     <!-- Footer -->
     <footer>
+        <section id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
@@ -427,6 +429,7 @@
             </div>
         </div>
         <a id="to-top" href="#top" class="btn btn-dark btn-lg"><i class="fa fa-chevron-up fa-fw fa-1x"></i></a>
+        </section>
     </footer>
 
     <!-- jQuery -->
