--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                                 </h4>
                                <!--  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
                                 <a href="https://www.linkedin.com/in/wen-zhong-ba254a78/" class="btn btn-light">LinkedIn</a>
-                                <a href="https://drive.google.com/open?id=0B1N9mn8zqH49cElqX3ZJWEtzY0tnOGt3U3R2X2hSOE9USjE4" class="btn btn-light">Resume</a>
+                                <a href="https://drive.google.com/file/d/0B-uK-jIEUhjVMWJmSFR3Z2xPYkE/view?usp=sharing" class="btn btn-light">Resume</a>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
